--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -33,6 +33,7 @@ dependencies:
   url_launcher: ^5.0.3
   google_fonts: ^1.1.0
   velocity_x: ^0.4.0
+  cloud_firestore: ^0.13.7
 
 dev_dependencies:
   flutter_test:
@@ -51,7 +52,8 @@ flutter:
 
   # To add assets to your application, add an assets section, like this:
   assets:
-    - assets/img/
+    - img/
+
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
